<resources>
    <string name="app_name">CSUMB CS Online Degree Requirements</string>
    <string name="enter_course_number">Enter course number</string>
    <string name="submit">Submit</string>
    <string name="string_set_first">The following courses are required for CS majors who have been accepted into the CS Online Degree Completion program.</string>
    <string name="string_course1">CST 300: Major ProSeminar (4 Units)</string>
    <string name="string_course2">CST 338: Software Design(4 Units)</string>
    <string name="string_course3">CST 363: Introduction to Database Management (4 Units)</string>
    <string name="string_course4">CST 334: Operating Systems (4 Units)</string>
    <string name="string_course5">CST 311: Intro to Computer Networks (4 Units)</string>
    <string name="string_course6">CST 336: Internet Programming (4 Units)</string>
    <string name="string_course7">CST 462S: Race, Gender, Class in the Digital World (3 Units)</string>
    <string name="string_course8">CST 328: Digital Art And Design (3 Units)</string>
    <string name="string_course9">CST 370: Design and Analysis of Algorithms (4 Units)</string>
    <string name="string_course10">CST 383: Introduction to Data Science (4 Units)</string>
    <string name="string_course11">CST 325: Graphics Programming (4 Units)</string>
    <string name="string_course12">CST 329: Reasoning with Logic (3 Units)</string>
    <string name="string_course13">CST 438: Software Engineering (4 Units)</string>
    <string name="string_course14">CST 499: Directed Group Capstone (4 Units)</string>
    <string name="string_description1">Helps students identify and articulate personal, professional, and social goals. Provides an integrated overview of the computer science and communication design majors and their requirements. Students develop a plan for their learning goals. Students learn writing, presentation, research and critical-thinking skills within the diversified fields of information technology and communication design.</string>
    <string name="string_description2">Provides students with the fundamental concepts to develop large-scale software, focusing on the object-oriented programming techniques. Coverage includes the introduction to Java programming language, object-oriented programming, software life cycle and development processes, requirements analysis, and graphical user interface development.</string>
    <string name="string_description3">This course provides balanced coverage of database use and design,focusing on relational databases. Students will learn to design relational schemas, write SQL queries, access a DB programmatically,and perform database administration. Students will gain a working knowledge of the algorithms and data structures used in query evaluation and transaction processing. Students will also learn to apply newer database technologies such as XML, NoSQL, and Hadoop.</string>
    <string name="string_description4">Students in this course will learn about the use and design of modern operating systems, focusing on Linux. On the “use” side, students will learn the Linux command line, to write shell scripts, and to build programs with GNU utilities like awk, sed, and make. On the “design” side, students will develop a deep understanding of process management, memory management, file systems, and concurrency, and how they apply to modern technologies like virtualization and cloud computing.</string>
    <string name="string_description5">Survey of Telecomm and Data Comm Technology Fundamentals, Local Area Network, Wide Area Network, Internet and internetworking protocols including TCP/IP, network security and performance, emerging industry trends such as voice over the network and high speed networking. Designed as a foundation for students who wish to pursue more advanced network studies including certificate programs. Includes hands-on networking labs that incorporate Cisco CCNA lab components.</string>
    <string name="string_description6">Provides students with dynamic web application development skills, focusing on the integration of server-side programming, database connectivity, and client-side scripting. Coverage includes the Internet architecture, responsive design, RESTful web services, and Web APIs. </string>
    <string name="string_description7">Provides students with key knowledge of race, gender, class and social justice especially in relation to technology in today’s digital world. Students challenge the barriers of expertise, gender, race, class, and location that restrict wider access to and understanding of the production and usage of new technologies. Students will engage in a practical experience in the community via their service placements, which will provide depth and context for considering questions of justice, equality, social responsibilities and the complexities of technology and its societal impact. The course uses scenario based approach combining presentations, discussions, and reflections to allow students explore the relationship between critical reflection and action on the topics mentioned above. </string>
    <string name="string_description8">A survey course that combines the study of technology, design and aesthetic principles as they apply to twenty-first century visual media. Students learn how fundamental concepts of art and design apply to a broad range of commercial, expressive and entertainment forms. Students also study the democratization of the creative process through digital media, using current technology to produce sophisticated and expressive examples of personal digital creativity.</string>
    <string name="string_description9">Students learn important data structures in computer science and acquire fundamental algorithm design techniques to get the efficient solutions to several computing problems from various disciplines. Topics include the analysis of algorithm efficiency, hash, heap, graph, tree, sorting and searching, brute force, divide-and-conquer, decrease-and-conquer, transform-and-conquer, dynamic programming, and greedy programming.</string>
    <string name="string_description10">In data science, data analysis and machine learning techniques are applied to visualize data, understand trends, and make predictions. In this course students will learn how to obtain data, preprocess it, apply machine learning methods, and visualize the results. A student who completes the course will have enough theoretical knowledge, and enough skill with modern statistical programming languages and their libraries,to define and perform complete data science projects.</string>
    <string name="string_description11">This course teaches the students the fundamentals of game programming and skills needed for game development, including GPU programming, matrix and quaternion algebra for physics calculation, animation, lighting and basics of implementing 3D models into a framework.</string>
    <string name="string_description12">In this course students learn to develop skill in using logic to describe and assess arguments. Students will learn to write formulas in propositional and first-order logic, and more importantly, to write and check proofs. Students will also learn to write formulas in three-valued and modal logic, know how to choose an appropriate logic, and understand the limitations of logic in capturing human reasoning.</string>
    <string name="string_description13">Prepares students for large-scale software development using software engineering principles and techniques. Coverage includes software process, requirements analysis and specification, software design, implementation, testing, and project management. Students are expected to work in teams to carry out a realistic software project.</string>
    <string name="string_description14">Students will work on a project in large groups (up to 5 students in each group), developing requirements specification, a solution plan followed by design and implementation of the solution. The problem statement for the projects will be selected by the faculty. Faculty will also play the role of a project manager directing the schedule and deliverables for these projects.</string>
    <string name="newline">\n</string>
    <string name="descriptorQuestion">Enter a course number for description of the course</string>
    <string name="course_description_error">Error retrieving course description</string>
    <string name="course_name_error">Error retrieving course number</string>
    <string name="digit_error">Please enter digits only!!!</string>
    <string name="csumb_logo_white">CSUMB LOGO(WHITE)</string>
    <string name="textview">TextView</string>
    <string name="csumb_logo_blue">CSUMB LOGO BLUE</string>
    <string name="or">OR</string>
</resources>