<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDAC7"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/csumb_logo_blue"
        app:srcCompat="@drawable/csumb_logo_540_bay_blue" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:background="#112E51"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/string_set_first"
        android:textColor="#DDDAC7"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClasses"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/purple_200" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/purple_200"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClasses2"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/textview"
        android:textColor="@color/purple_500" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/descriptorQuestion"
        android:textColor="#DDDAC7" />

    <EditText
        android:id="@+id/etCourseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_course_number"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:onClick="sendMessage"
        android:text="@string/submit"
        android:textColor="#DDDAC7" />
</LinearLayout>